# discord_msg_reader_sender

./: Cargo.toml  README.md
src/: data.rs  main.rs  message_create.rs  msg_response.rs  payload.rs  ready.rs  utils.rs
src/data/: request.rs
