[package]
name = "discord_msg_sender"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.22"
tokio = { version = "1.32.0", features = ["full"] }
rand = "0.8.5"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
serde_derive = "1.0.188"
tungstenite = { version = "0.20.1", features = ["native-tls"] }
url = "2.2.2"
tokio-tungstenite = { version = "0.20.1", features = ["native-tls"] }
futures = "0.3.29"
futures-util = "0.3.29"